SDI–session3-Ejercicio-complementario2

--- a/sdi1920-605-lab-spring/src/main/resources/messages_en.properties
+++ b/sdi1920-605-lab-spring/src/main/resources/messages_en.properties
@@ -1,3 +1,11 @@
+home.message=Home
+gestionNotas=Marks Management
+agregarNota=Add Mark
+gestionUsuarios=Users Management
+agregarUsuario=Add User
+verUsuarios=List Users
+verProfesores=List Teachers
+agregarProfesor=Add Teacher
 welcome.message=Welcome to homepage
 language.change=Language
 language.en=English
