--- a/sdi1920-605-lab-spring/src/main/resources/messages_es.properties
+++ b/sdi1920-605-lab-spring/src/main/resources/messages_es.properties
@@ -1,3 +1,11 @@
+home.message=Casa
+gestionNotas=Gestion Notas
+agregarNota=Agregar Nota
+gestionUsuarios=Gestion Usuarios
+agregarUsuario=Agregar Usuario
+verUsuarios=Ver Usuarios
+verProfesores=Ver Profesores
+agregarProfesor=Agregar Profesor
 welcome.message=Bienvenidos a la página principal
 language.change= Idioma
 language.en=English
