--- a/sdi1920-605-lab-spring/src/main/resources/messages_fr.properties
+++ b/sdi1920-605-lab-spring/src/main/resources/messages_fr.properties
@@ -1,17 +1,17 @@
-home.message=Casa
-gestionNotas=Gestion Notas
-agregarNota=Agregar Nota
-gestionUsuarios=Gestion Usuarios
-agregarUsuario=Agregar Usuario
-verUsuarios=Ver Usuarios
-verProfesores=Ver Profesores
-agregarProfesor=Agregar Profesor
-welcome.message=Bienvenidos a la p√°gina principal
-language.change= Idioma
-language.en=English
-language.es=Spanish
-login.message=Ident√≠ficate
-signup.message=Registrate
+home.message=Maison
+gestionNotas=GÈrer Notes
+agregarNota=Ajouter notes
+gestionUsuarios=GÈrer User
+agregarUsuario=Ajouter User
+verUsuarios=regarder users
+verProfesores=regarder enseignant
+agregarProfesor=ajouter enseignant
+welcome.message=Venbenuti
+language.change= Languaje
+language.en=Angle
+language.es=Espanel
+login.message=entre
+signup.message=registre
 Error.empty= Este campo no puede ser vac√≠o
 Error.signup.dni.length=El DNI debe tener entre 5 y 24 caracteres.
 Error.signup.dni.duplicate=This DNI already exist.
