SDI–session3-Ejercicio-complementario2

--- a/sdi1920-605-lab-spring/src/main/resources/messages.properties
+++ b/sdi1920-605-lab-spring/src/main/resources/messages.properties
@@ -1,17 +1,40 @@
 home.message=Casa
+alumno=Alumno
+descripcion=Descripcion
+puntuacion=Puntuacion
+enviar=Enviar
+detallesNota=Detalles Nota
+editarNota=Editar Nota
+modificar=Modificar
+notas=Notas
+listadoNotasSubTexto=Todas las notas disponibles son las siguientes
+actualizar=Actualizar
+nombre=Nombre
+apellidos=Apellidos
+categoria=Categoria
+profesores=Profesores
+listadoProfesoresSubTexto=Todos los profesores disponibles son los siguientes
+detalles=Detalles
+eliminar=Eliminar
+editarUsuario=Editar Usuario
+usuarios=Usuarios
+listadoUsuariosSubTexto=Todos los usuarios son los siguientes
+zonaPrivada=Esta es una zona privada
+usuarioAtenticadoComo=Usuario Autentificado Como
 gestionNotas=Gestion Notas
-agregarNota=Agregar Nota
+agregarNota=Añadir Nota
 gestionUsuarios=Gestion Usuarios
-agregarUsuario=Agregar Usuario
+agregarUsuario=Añadir Usuario
 verUsuarios=Ver Usuarios
 verProfesores=Ver Profesores
-agregarProfesor=Agregar Profesor
-welcome.message=Bienvenidos a la página principal
-language.change= Idioma
-language.en=English
-language.es=Spanish
-login.message=Identíficate
-signup.message=Registrate
+agregarProfesor=Añadir Profesor
+welcome.message=Bienvenido a la pagina principal
+language.change=Idioma
+language.en=Ingles
+language.es=Español
+language.fr=Frances
+login.message=Entrar
+signup.message=Registrarse
 Error.empty= Este campo no puede ser vacío
 Error.signup.dni.length=El DNI debe tener entre 5 y 24 caracteres.
 Error.signup.dni.duplicate=This DNI already exist.
