--- a/sdi1920-605-lab-spring/src/main/resources/messages_en.properties
+++ b/sdi1920-605-lab-spring/src/main/resources/messages_en.properties
@@ -1,4 +1,26 @@
 home.message=Home
+alumno=Student
+descripcion=Description
+puntuacion=Score
+enviar=Send
+detallesNota=Mark Details
+editarNota=Edit Mark
+modificar=Modify
+notas=Marks
+listadoNotasSubTexto=All the available marks are the following ones
+actualizar=Update
+nombre=Name
+apellidos=Surnames
+categoria=Category
+profesores=Teachers
+listadoProfesoresSubTexto=All the teachers are the following ones
+detalles=Details
+eliminar=Delete
+editarUsuario=Edit User
+usuarios=Users
+listadoUsuariosSubTexto=All the users are the following ones
+zonaPrivada=This is a private zone
+usuarioAtenticadoComo=Autenticated Users As
 gestionNotas=Marks Management
 agregarNota=Add Mark
 gestionUsuarios=Users Management
@@ -10,6 +32,7 @@ welcome.message=Welcome to homepage
 language.change=Language
 language.en=English
 language.es=Spanish
+language.fr=French
 login.message=Login In
 signup.message=Sign Up
 Error.empty= This field is required.
