--- a/sdi1920-605-lab-spring/src/main/resources/messages_fr.properties
+++ b/sdi1920-605-lab-spring/src/main/resources/messages_fr.properties
@@ -1,21 +1,44 @@
 home.message=Maison
-gestionNotas=Gérer Notes
-agregarNota=Ajouter notes
-gestionUsuarios=Gérer User
-agregarUsuario=Ajouter User
-verUsuarios=regarder users
-verProfesores=regarder enseignant
-agregarProfesor=ajouter enseignant
-welcome.message=Venbenuti
-language.change= Languaje
-language.en=Angle
-language.es=Espanel
-login.message=entre
-signup.message=registre
-Error.empty= Este campo no puede ser vacÃ­o
+alumno=Étudiant
+descripcion=Description
+puntuacion=Ponctuation
+enviar=Envoyer
+detallesNota=Détails Remarque
+editarNota=Modifier Remarque
+modificar=Modifier
+notas=Remarques
+listadoNotasSubTexto=Toutes les notes disponibles
+actualizar=Mettre à jour
+nombre=Nom
+apellidos=Surnoms
+categoria=Categorie
+profesores=Professeurs 
+listadoProfesoresSubTexto=Tous les professeurs disponibles
+detalles=Détails
+eliminar=Supprimer
+editarUsuario=Modifier Utilisateurs
+usuarios=Utilisateurs
+listadoUsuariosSubTexto=Tous les utilisateurs disponibles
+zonaPrivada=Ceci est un espace privé
+usuarioAtenticadoComo=Utilisateur Autentificado Como
+gestionNotas=Gestion Remarques
+agregarNota=Ajouter Remarque
+gestionUsuarios=Gestion Utilisateures
+agregarUsuario=Ajouter Utilisateures
+verUsuarios=Regarder Utilisateures
+verProfesores=Regarder Professeurs
+agregarProfesor=Ajouter Professeurs 
+welcome.message=Bienvenue sur la page principale
+language.change=Langage
+language.en=Anglais
+language.es=Espagnol
+language.fr=Français
+login.message=Entrer
+signup.message=Inscrire
+Error.empty= Este campo no puede ser vacío
 Error.signup.dni.length=El DNI debe tener entre 5 y 24 caracteres.
 Error.signup.dni.duplicate=This DNI already exist.
 Error.signup.name.length=El nombre debe tener entre 5 y 24 caracteres.
 Error.signup.lastName.length=El apellido debe tener entre 5 y 24 caracteres.
-Error.signup.password.length =La contraseÃ±a debe tener entre 5 y 24 caracteres.
-Error.signup.passwordConfirm.coincidence=Las contraseÃ±as no coinciden
+Error.signup.password.length =La contraseña debe tener entre 5 y 24 caracteres.
+Error.signup.passwordConfirm.coincidence=Las contraseñas no coinciden
