--- a/sdi1920-605-lab-spring/src/main/resources/messages.properties
+++ b/sdi1920-605-lab-spring/src/main/resources/messages.properties
@@ -38,6 +38,7 @@ signup.message=Registrarse
 Error.empty= Este campo no puede ser vacío
 Error.signup.dni.length=El DNI debe tener entre 5 y 24 caracteres.
 Error.signup.dni.duplicate=This DNI already exist.
+Error.signup.dni.letter=Tiene q terminar en una letra
 Error.signup.name.length=El nombre debe tener entre 5 y 24 caracteres.
 Error.signup.lastName.length=El apellido debe tener entre 5 y 24 caracteres.
 Error.signup.password.length =La contraseña debe tener entre 5 y 24 caracteres.
