--- a/sdi1920-605-lab-spring/src/main/resources/messages_es.properties
+++ b/sdi1920-605-lab-spring/src/main/resources/messages_es.properties
@@ -37,7 +37,10 @@ login.message=Entrar
 signup.message=Registrarse
 Error.empty= Este campo no puede ser vacío
 Error.signup.dni.length=El DNI debe tener entre 5 y 24 caracteres.
+Error.description.mark.length=La description debe tener al menos 20 caracteres
+Error.score.mark.length=La puntuacion debe estar entre 0 y 10
 Error.signup.dni.duplicate=This DNI already exist.
+Error.signup.dni.letter=Tiene q terminar en una letra
 Error.signup.name.length=El nombre debe tener entre 5 y 24 caracteres.
 Error.signup.lastName.length=El apellido debe tener entre 5 y 24 caracteres.
 Error.signup.password.length =La contraseña debe tener entre 5 y 24 caracteres.
